Feat: Gestion des restaurants partenaires
